# Federlicht

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  feather.cmd  feather.ps1  future_architecture_plan.md  hidair-feather.cmd  hidair-feather.ps1  pyproject.toml  requirements.txt  run.py
docs/: federlicht_report.md  federnett_remaining_tasks.md  federnett_roadmap.md
examples/: README.md  test_run.py
examples/agent_configs/: ai_governance_team_deepresearch.json
examples/instructions/: 20251015.txt  20260104.txt  20260104_prompt_OLED.txt  20260105.txt  20260106.txt  20260107.txt  20260108.txt  20260109.txt  20260110.txt  20260112.txt  20260112_prompt_MS-AI-Diffusion2025.txt
examples/runs/20260110_qc-oled/: Quantum_Computing_OLED_Report.html  Quantum_Computing_OLED_Report_Inventory.html  draft_report.md  draft_report_oled_args_evidence_limits.txt  draft_report_oled_materials.txt  final_report_draft.md  quantum_computing_oled_analysis.html  quantum_computing_oled_report_final.html  quantum_computing_oled_report_sources.html  quantum_computing_oled_report_v2.html  quantum_computing_oled_review.html  quantum_computing_oled_review_detail.html  quantum_computing_oled_review_links.html  quantum_computing_oled_scout.html  quantum_computing_report.html  quantum_oled_analysis.html  quantum_oled_report.html  report.html  report.md  report_complete.html  report_draft.md  report_final.md  report_final_v2.md  report_full_1.html  report_full_10.html  report_full_10_1.html  report_full_10_2.html  report_full_10_3.html  report_full_11.html  report_full_12.html  report_full_13.html  report_full_14.html  report_full_15.html  report_full_16.html  report_full_17.html  report_full_18.html  report_full_19.html  report_full_21.html  report_full_22.html  report_full_23.html  (+14 more)
examples/runs/20260110_qc-oled/instruction/: report_prompt_report_full_17.txt
examples/runs/20260110_qc-oled/report/: run_overview_report_full.md  run_overview_report_full_1.md  run_overview_report_full_11.md  run_overview_report_full_12.md  run_overview_report_full_13.md  run_overview_report_full_14.md  (+17 more)
examples/runs/20260128_testRL_01/: report_full.html  report_full_1.html
scripts/: README_deepagents_report_full.md  deepagents_report.py  deepagents_report_full.py
scripts/templates/: acs_review.md  acs_review.tex  annual_review.md  arxiv_preprint.md  default.md  default.tex  executive_brief.md  mit_tech_review.md  mit_tech_review_10_breakthroughs.md  nature_journal.md  nature_journal.tex  nature_reviews.md  preview_annual_review.html  preview_default.html  preview_executive_brief.html  preview_mit_tech_review.html  preview_mit_tech_review_10_breakthroughs.html  preview_nature_reviews.html  preview_prl_perspective.html  preview_quanta_magazine.html  preview_review_of_modern_physics.html  preview_technical_deep_dive.html  preview_trend_scan.html  prl_manuscript.md  prl_perspective.md  prl_revtex4-2.tex  quanta_magazine.md  review_of_modern_physics.md  technical_deep_dive.md  trend_scan.md
scripts/templates/styles/: annual_review.css  default.css  executive_brief.css  mit_tech_review.css  mit_tech_review_10_breakthroughs.css  nature_reviews.css  prl_perspective.css  quanta_magazine.css  review_of_modern_physics.css  technical_deep_dive.css  trend_scan.css
site/: index.html  manifest.json
site/custom_templates/: custom_mit_tech_review.css  custom_mit_tech_review.md
site/federnett/: app.css  app.js  canvas.js  index.html
site/runs/20260110_qc-oled/: report_full.html  report_full_1.html
site/runs/20260127_arxiv-molgenRL/: report_full.html
site/runs/AI_Agent_앞으로_1년/: _federlicht_log.txt  report_full_3.html
site/runs/agenticAI_recent/: _federlicht_log.txt  report_full_2.html  tmp_report_validation.html
site/runs/physical_ai_insight/: _federlicht_log.txt  report_full.html
site/runs/배당주투자법/: report_full.html  report_full_1.html
src/feather/: __init__.py  arxiv_ops.py  cli.py  collector.py  linkedin_ops.py  models.py  openalex_ops.py  review.py  web_research.py  youtube_ops.py
src/federhav/: cli.py
src/federlicht/: __init__.py  agent_info.py  agent_info_impl.py  agent_runtime.py  agents.py  api.py  artwork.py  cli_args.py  federnett.py  orchestrator.py  pipeline_runner.py  pipeline_runner_impl.py  profiles.py  prompts.py  report.py  site_hub_index.py  tools.py  verification_tools.py  versioning.py  workflow.md  workflow_stages.py  workflow_trace.py
src/federlicht/profiles/: ai_governance_team.json  ai_governance_team_memory.txt  federhav.json  federhav_memory.txt  registry.json
src/federlicht/readers/: pdf.py
src/federlicht/render/: html.py
src/federlicht/templates/: acs_review.md  annual_review.md  arxiv_preprint.md  default.md  executive_brief.md  fancy_style.md  linkedin_review.md  mit_tech_review.md  mit_tech_review_10_breakthroughs.md  nature_journal.md  nature_reviews.md  preview_default.html  prl_manuscript.md  prl_perspective.md  quanta_magazine.md  review_of_modern_physics.md  technical_deep_dive.md  trend_scan.md
src/federnett/: __init__.py  agent_profiles.py  app.py  commands.py  config.py  constants.py  filesystem.py  help_agent.py  jobs.py  routes.py  templates.py  utils.py
src/hidair_feather/: __init__.py  arxiv_ops.py  cli.py  collector.py  linkedin_ops.py  local_ops.py  models.py  openalex_ops.py  tavily.py  utils.py  youtube_ops.py
tests/: test_agent_info.py  test_agent_profiles.py  test_agent_runtime.py  test_artwork_tools.py  test_collector.py  test_federlicht_cli_args.py  test_federnett_commands.py  test_federnett_jobs.py  test_federnett_routes.py  test_help_agent.py  test_linkedin_ops.py  test_pipeline_runner_impl.py  test_pipeline_runner_reordered_e2e.py  test_report_facade.py  test_report_metadata.py  test_review.py  test_site_hub_index.py  test_utils.py  test_verification_tools.py  test_workflow_stages.py  test_workflow_trace.py  test_youtube_ops.py
(+492 files in other folders)
