[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federlicht"
version = "1.2.0"
description = "Feather-light knowledge intake."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.optional-dependencies]
arxiv = ["arxiv"]
pdf = ["pymupdf", "pypdfium2", "pillow", "pdfplumber"]
youtube = ["youtube-transcript-api"]
local = ["python-docx", "python-pptx", "beautifulsoup4", "openpyxl"]
agents = ["deepagents", "markdown", "langchain-openai"]
report = [
  "deepagents",
  "markdown",
  "langchain-openai",
  "pymupdf",
  "pypdfium2",
  "pillow",
  "pdfplumber",
  "beautifulsoup4",
  "openpyxl",
]
opencv = ["opencv-python"]
all = [
  "arxiv",
  "pymupdf",
  "pypdfium2",
  "pillow",
  "pdfplumber",
  "youtube-transcript-api",
  "python-docx",
  "python-pptx",
  "openpyxl",
  "beautifulsoup4",
  "deepagents",
  "markdown",
  "langchain-openai",
  "opencv-python",
]

[project.scripts]
feather = "feather.cli:main"
federlicht = "federlicht.report:main"
federnett = "federnett.app:main"
federhav = "federhav.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
federlicht = [
  "templates/**/*.md",
  "templates/**/*.css",
  "templates/**/*.tex",
  "templates/**/*.html",
  "profiles/*.json",
  "profiles/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".backup", "runs", "archive"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
