[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federlicht"
version = "1.7.0"
description = "Federlicht platform: Feather intake, Federlicht report engine, Federnett studio, and FederHav profile workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hyun-Jung Kim", email = "Infant@kias.re.kr" },
  { name = "Hyun-Jung Kim", email = "angpangmokjang@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["federlicht", "feather", "rag", "research", "reporting", "agentic", "federnett", "federhav"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/Infant83/Federlicht"
Repository = "https://github.com/Infant83/Federlicht"
Documentation = "https://github.com/Infant83/Federlicht#readme"
"Google Scholar" = "https://scholar.google.com/citations?user=FtSLeT4AAAAJ&hl=en"
GitHub = "https://github.com/Infant83"
LinkedIn = "https://www.linkedin.com/in/hyun-jung-kim-8126a7236/"

[project.optional-dependencies]
arxiv = ["arxiv"]
pdf = ["pymupdf", "pypdfium2", "pillow", "pdfplumber"]
youtube = ["youtube-transcript-api"]
local = ["python-docx", "python-pptx", "beautifulsoup4", "openpyxl"]
artwork = [
  "matplotlib>=3.8",
  "networkx>=3.2",
]
agents = [
  "deepagents>=0.3.5,<0.4; python_version<'3.11'",
  "deepagents>=0.4.1; python_version>='3.11'",
  "markdown",
  "langchain-openai",
]
report = [
  "deepagents>=0.3.5,<0.4; python_version<'3.11'",
  "deepagents>=0.4.1; python_version>='3.11'",
  "markdown",
  "langchain-openai",
  "pymupdf",
  "pypdfium2",
  "pillow",
  "pdfplumber",
  "beautifulsoup4",
  "openpyxl",
]
report-lite = [
  "deepagents>=0.3.5,<0.4; python_version<'3.11'",
  "deepagents>=0.4.1; python_version>='3.11'",
  "markdown",
  "langchain-openai",
  "pypdfium2",
  "pillow",
  "pdfplumber",
  "beautifulsoup4",
  "openpyxl",
]
opencv = ["opencv-python"]
all = [
  "arxiv",
  "pymupdf",
  "pypdfium2",
  "pillow",
  "pdfplumber",
  "youtube-transcript-api",
  "python-docx",
  "python-pptx",
  "openpyxl",
  "beautifulsoup4",
  "deepagents>=0.3.5,<0.4; python_version<'3.11'",
  "deepagents>=0.4.1; python_version>='3.11'",
  "markdown",
  "langchain-openai",
  "opencv-python",
]

[project.scripts]
feather = "feather.cli:main"
federlicht = "federlicht.report:main"
federnett = "federnett.app:main"
federhav = "federhav.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
federlicht = [
  "templates/**/*.md",
  "templates/**/*.css",
  "templates/**/*.tex",
  "templates/**/*.html",
  "profiles/*.json",
  "profiles/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".backup", "runs", "archive"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
